[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "forensic-toolkit"
version = "0.2.0"
description = "跨平台数字取证工具集 — 纯 Python 标准库，零外部依赖"
requires-python = ">=3.11"
authors = [{ name = "Forensic Toolkit Authors" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Forensics",
]
dependencies = []

[project.scripts]
ftk = "forensic_toolkit.cli.main:cli"
ftk-gui = "forensic_toolkit.gui.app:run_gui"

[tool.setuptools.packages.find]
where = ["."]
include = ["forensic_toolkit*"]
